loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:5: error: not found: value nb
  nbPas = nb Pas +1
          ^